--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.5",
     "eslint-plugin-import": "^2.29.1",
+    "formik": "^2.4.5",
+    "libphonenumber-js": "^1.10.58",
     "modern-normalize": "^2.0.0",
     "nanoid": "^5.0.4",
     "normalize.css": "^8.0.1",
@@ -18,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-lazy": "^1.1.0",
+    "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
@@ -26,7 +29,8 @@
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.8",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
