--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,18 +4,8 @@
   "icons": [
     {
       "src": "logo_150.png",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo_150.png",
       "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo_150.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "64x64 32x32 24x24 16x16"
     }
   ],
   "start_url": ".",
