--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.8",
+    "video-react": "^0.16.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
