--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-facebook-pixel": "^1.0.4",
     "react-intersection-observer": "^9.8.1",
     "react-lazy": "^1.1.0",
     "react-phone-input-2": "^2.15.1",
