--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.5",
+    "crypto-js": "^4.2.0",
     "eslint-plugin-import": "^2.29.1",
     "formik": "^2.4.5",
     "libphonenumber-js": "^1.10.58",
