--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-facebook-pixel": "^1.0.4",
     "react-intersection-observer": "^9.8.1",
+    "react-ipgeolocation": "^1.4.0",
     "react-lazy": "^1.1.0",
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.1.0",
